# RAJO

./: .gitignore  README.md  b2b-ecommerce-platform-concept.md  b2b-mobile-app-technical-blueprint.md
apps/admin/: README.md
apps/mobile/: README.md
docs/: README.md
services/api/: .env.example  README.md  alembic.ini  pyproject.toml
services/api/alembic/: README  env.py
services/api/alembic/versions/: 20260502_0001_create_core_tables.py
services/api/app/: __init__.py
services/api/app/api/: deps.py  router.py
services/api/app/api/routes/: admin_categories.py  admin_inventory.py  admin_orders.py  admin_products.py  auth.py  categories.py  orders.py  products.py
services/api/app/core/: config.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/models/: catalog.py  inventory.py  ordering.py  user.py
services/api/app/schemas/: auth.py  category.py  inventory.py  order.py  product.py
